@startuml
skinparam classAttributeIconSize 0

package "Core & History (Singleton, Facade, Memento)" {
    class SimulationManager <<Singleton>> {
        - static instance: SimulationManager
        - history: HistoryManager
        - observers: List<SimulationObserver>
        - SimulationManager()
        + static getInstance(): SimulationManager
        + getHistory(): HistoryManager
        + attach(o: SimulationObserver): void
        + notifyObservers(event: String): void
    }

    class ReportFacade <<Facade>> {
        - network: NetworkNode
        + generateNetworkReport(): String
        + getCalculatedPaths(): List<Path>
    }

    class HistoryManager {
        - undoStack: Stack<SimulationCommand>
        - redoStack: Stack<SimulationCommand>
        + executeCommand(c: SimulationCommand): void
        + undo(): void
        + redo(): void
    }

    class SimulationMemento <<Memento>> {
        - stateSnapshot: Map
        + getState(): Map
    }
}

package "Network Entities (Composite & Decorator)" {
    abstract class NetworkNode <<Composite Component>> {
        + {abstract} processTraffic(): String
        + {abstract} getName(): String
        + {abstract} clone(): NetworkNode
    }

    class ServerNode {
        - state: NodeState
        - strategy: RoutingStrategy
        + processTraffic(): String
        + getName(): String
        + changeState(s: NodeState): void
        + clone(): NetworkNode
    }

    class Subnet <<Composite>> {
        - nodes: List<NetworkNode>
        + addNode(n: NetworkNode): void
        + processTraffic(): String
        + createIterator(): NodeIterator
    }

    abstract class NodeDecorator <<Decorator>> {
        # wrappee: NetworkNode
        + NodeDecorator(n: NetworkNode)
        + processTraffic(): String
    }

    class FirewallDecorator {
        + processTraffic(): String
    }
}

package "Behavior & State (Strategy & State)" {
    interface RoutingStrategy <<Strategy>> {
        + calculatePath(): List<NetworkNode>
        + getName(): String
    }
    class ShortestPathStrategy {
        + calculatePath(): List<NetworkNode>
    }
    class RandomPathStrategy {
        + calculatePath(): List<NetworkNode>
    }

    interface NodeState <<State>> {
        + handle(node: ServerNode): String
    }
    class OnlineState {
        + handle(node: ServerNode): String
    }
    class OfflineState {
        + handle(node: ServerNode): String
    }
}

package "Creation (Builder & Prototype)" {
    class NetworkBuilder <<Builder>> {
        - currentSubnet: Subnet
        + reset(name: String): void
        + addServer(name: String): NetworkBuilder
        + buildStarTopology(routerName: String, count: int): NetworkBuilder
        + getResult(): Subnet
    }

    interface TopologyPrototype <<Prototype>> {
        + clone(): TopologyPrototype
    }
}

package "Interaction (Command, Observer, Iterator)" {
    interface SimulationCommand <<Command>> {
        + execute(): void
        + undo(): void
    }
    class AddNodeCommand {
        + execute(): void
        + undo(): void
    }
    class DeleteNodeCommand {
        + execute(): void
        + undo(): void
    }

    interface SimulationObserver <<Observer>> {
        + update(event: String): void
    }
    class DashboardObserver {
        + update(event: String): void
    }

    interface NodeIterator <<Iterator>> {
        + hasNext(): boolean
        + next(): NetworkNode
    }
    class SubnetIterator {
        + hasNext(): boolean
        + next(): NetworkNode
    }
}

' Зв'язки між класами
TopologyPrototype <|-- NetworkNode
NetworkNode <|-- ServerNode
NetworkNode <|-- Subnet
Subnet o-- NetworkNode
NetworkNode <|-- NodeDecorator
NodeDecorator o-- NetworkNode
NodeDecorator <|-- FirewallDecorator

ServerNode *-- RoutingStrategy
ServerNode *-- NodeState
RoutingStrategy <|.. ShortestPathStrategy
RoutingStrategy <|.. RandomPathStrategy
NodeState <|.. OnlineState
NodeState <|.. OfflineState

SimulationManager o-- SimulationObserver
SimulationManager *-- HistoryManager
HistoryManager o-- SimulationCommand
SimulationObserver <|.. DashboardObserver
SimulationCommand <|.. AddNodeCommand
SimulationCommand <|.. DeleteNodeCommand
SimulationCommand ..> SimulationMemento : saves/restores >

Subnet ..> NodeIterator : creates >
NodeIterator <|.. SubnetIterator
NetworkBuilder ..> Subnet : creates >
ReportFacade --> NetworkNode : analyzes >

@enduml
